<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/remindersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/label_azkar_reminder_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/reminderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/remindersLabel">

        <Button
            android:id="@+id/btnMorning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/morning_azkar_reminder_txt"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnEvening"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/evening_azkar_reminder_txt"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/reminderLayout" />

    <TextView
        android:id="@+id/azkarFrequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/label_azkar_frequency_txt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/azkarFrequencyLabel">

        <RadioButton
            android:id="@+id/optLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_option_low" />

        <RadioButton
            android:id="@+id/optMid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_option_mid" />

        <RadioButton
            android:id="@+id/optHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_option_high" />
    </RadioGroup>

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chip_background"
        android:paddingStart="18dp"
        android:paddingTop="6dp"
        android:paddingEnd="18dp"
        android:paddingBottom="6dp"
        android:text="@string/label_test"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>
